# openenv-model-release-env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
openenv_model_release_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: validate-submission.sh
server/: __init__.py  app.py  model_release_env_environment.py  requirements.txt
tests/: conftest.py  test_model_release_env.py
